[gd_scene load_steps=12 format=4 uid="uid://c2uf2oan8ixx1"]

[ext_resource type="Script" uid="uid://c52ixqcw4435e" path="res://Scenes/main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://xmts8rd4sjjq" path="res://Scenes/player.tscn" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://gygr345ahskf" path="res://icon.svg" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dv4o7yvj7po05" path="res://Scenes/enemy_spawner.tscn" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://cknjxn4wec7g4" path="res://Scenes/bullet_manager.gd" id="4_kry3j"]
[ext_resource type="PackedScene" uid="uid://dkjr1slubkxsy" path="res://Scenes/bullet.tscn" id="5_21xkr"]
[ext_resource type="PackedScene" uid="uid://dinqycx0wiftv" path="res://Scenes/HUD.tscn" id="7_6bp64"]

[sub_resource type="TileMapPattern" id="TileMapPattern_0xm2m"]
tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 131072, 0, 2, 196608, 0, 3, 262144, 0, 4, 327680, 0, 5, 393216, 0, 6, 458752, 0, 7, 1, 65536, 0, 65537, 65536, 1, 131073, 65536, 2, 196609, 65536, 3, 262145, 65536, 4, 327681, 65536, 5, 393217, 65536, 6, 458753, 65536, 7, 2, 131072, 0, 65538, 131072, 1, 131074, 131072, 2, 196610, 131072, 3, 262146, 131072, 4, 327682, 131072, 5, 393218, 131072, 6, 458754, 131072, 7, 3, 196608, 0, 65539, 196608, 1, 131075, 196608, 2, 196611, 196608, 3, 262147, 196608, 4, 327683, 196608, 5, 393219, 196608, 6, 458755, 196608, 7, 4, 262144, 0, 65540, 262144, 1, 131076, 262144, 2, 196612, 262144, 3, 262148, 262144, 4, 327684, 262144, 5, 393220, 262144, 6, 458756, 262144, 7, 5, 327680, 0, 65541, 327680, 1, 131077, 327680, 2, 196613, 327680, 3, 262149, 327680, 4, 327685, 327680, 5, 393221, 327680, 6, 458757, 327680, 7, 6, 393216, 0, 65542, 393216, 1, 131078, 393216, 2, 196614, 393216, 3, 262150, 393216, 4, 327686, 393216, 5, 393222, 393216, 6, 458758, 393216, 7, 7, 458752, 0, 65543, 458752, 1, 131079, 458752, 2, 196615, 458752, 3, 262151, 458752, 4, 327687, 458752, 5, 393223, 458752, 6, 458759, 458752, 7)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0xm2m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h2yge"]
texture = ExtResource("2_0xm2m")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/terrain_set = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/terrain_set = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/terrain_set = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/terrain_set = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/terrain_set = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/terrain_set = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/terrain_set = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/terrain_set = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/terrain_set = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/terrain_set = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ig7tw"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 14
physics_layer_0/physics_material = SubResource("PhysicsMaterial_0xm2m")
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_h2yge")
pattern_0 = SubResource("TileMapPattern_0xm2m")

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="World" type="Node2D" parent="."]

[node name="Obstacles" type="TileMapLayer" parent="World"]
tile_map_data = PackedByteArray("AAAAABwAAAAAAAAAAAAAAB0AAAAAAAEAAAAAAB4AAAAAAAIAAAAAAB8AAAAAAAMAAAAAACAAAAAAAAQAAAAAACEAAAAAAAUAAAAAACIAAAAAAAYAAAAAACMAAAAAAAcAAAABABwAAAABAAAAAAABAB0AAAABAAEAAAABAB4AAAABAAIAAAABAB8AAAABAAMAAAABACAAAAABAAQAAAABACEAAAABAAUAAAABACIAAAABAAYAAAABACMAAAABAAcAAAACABwAAAACAAAAAAACAB0AAAACAAEAAAACAB4AAAACAAIAAAACAB8AAAACAAMAAAACACAAAAACAAQAAAACACEAAAACAAUAAAACACIAAAACAAYAAAACACMAAAACAAcAAAADABwAAAADAAAAAAADAB0AAAADAAEAAAADAB4AAAADAAIAAAADAB8AAAADAAMAAAADACAAAAADAAQAAAADACEAAAADAAUAAAADACIAAAADAAYAAAADACMAAAADAAcAAAAEABwAAAAEAAAAAAAEAB0AAAAEAAEAAAAEAB4AAAAEAAIAAAAEAB8AAAAEAAMAAAAEACAAAAAEAAQAAAAEACEAAAAEAAUAAAAEACIAAAAEAAYAAAAEACMAAAAEAAcAAAAFABwAAAAFAAAAAAAFAB0AAAAFAAEAAAAFAB4AAAAFAAIAAAAFAB8AAAAFAAMAAAAFACAAAAAFAAQAAAAFACEAAAAFAAUAAAAFACIAAAAFAAYAAAAFACMAAAAFAAcAAAAGABwAAAAGAAAAAAAGAB0AAAAGAAEAAAAGAB4AAAAGAAIAAAAGAB8AAAAGAAMAAAAGACAAAAAGAAQAAAAGACEAAAAGAAUAAAAGACIAAAAGAAYAAAAGACMAAAAGAAcAAAAHABwAAAAHAAAAAAAHAB0AAAAHAAEAAAAHAB4AAAAHAAIAAAAHAB8AAAAHAAMAAAAHACAAAAAHAAQAAAAHACEAAAAHAAUAAAAHACIAAAAHAAYAAAAHACMAAAAHAAcAAAAIABwAAAAAAAAAAAAIAB0AAAAAAAEAAAAIAB4AAAAAAAIAAAAIAB8AAAAAAAMAAAAIACAAAAAAAAQAAAAIACEAAAAAAAUAAAAIACIAAAAAAAYAAAAIACMAAAAAAAcAAAAJAB0AAAABAAEAAAAJAB4AAAABAAIAAAAJAB8AAAABAAMAAAAJACAAAAABAAQAAAAJACEAAAABAAUAAAAJACIAAAABAAYAAAAJACMAAAABAAcAAAAKABwAAAACAAAAAAAKAB4AAAACAAIAAAAKAB8AAAACAAMAAAAKACAAAAACAAQAAAAKACEAAAACAAUAAAAKACIAAAACAAYAAAAKACMAAAACAAcAAAALAB4AAAADAAIAAAALAB8AAAADAAMAAAALACAAAAADAAQAAAALACEAAAADAAUAAAALACIAAAADAAYAAAALACMAAAADAAcAAAAMAB4AAAAEAAIAAAAMAB8AAAAEAAMAAAAMACAAAAAEAAQAAAAMACEAAAAEAAUAAAAMACIAAAAEAAYAAAAMACMAAAAEAAcAAAANAB4AAAAFAAIAAAANAB8AAAAFAAMAAAANACAAAAAFAAQAAAANACEAAAAFAAUAAAANACIAAAAFAAYAAAANACMAAAAFAAcAAAAOAB4AAAAGAAIAAAAOAB8AAAAGAAMAAAAOACAAAAAGAAQAAAAOACEAAAAGAAUAAAAOACIAAAAGAAYAAAAOACMAAAAGAAcAAAAPAB4AAAAHAAIAAAAPAB8AAAAHAAMAAAAPACAAAAAHAAQAAAAPACEAAAAHAAUAAAAPACIAAAAHAAYAAAAPACMAAAAHAAcAAAAQABQAAAAAAAAAAAAQABcAAAAAAAMAAAARABQAAAABAAAAAAARABcAAAABAAMAAAASABQAAAACAAAAAAASABcAAAACAAMAAAATABQAAAADAAAAAAATABcAAAADAAMAAAAUABQAAAAEAAAAAAAUABgAAAAEAAQAAAAVABQAAAAFAAAAAAAWABQAAAAGAAAAAAAWABoAAAAGAAYAAAAXABsAAAAHAAcAAAAIABQAAAAAAAAAAAAIABYAAAAAAAIAAAAIABcAAAAAAAMAAAAIABgAAAAAAAQAAAAJABQAAAABAAAAAAAKABQAAAACAAAAAAAKABUAAAACAAEAAAALABQAAAADAAAAAAALABUAAAADAAEAAAAMABQAAAAEAAAAAAANABQAAAAFAAAAAAAOABQAAAAGAAAAAAAOABkAAAAGAAUAAAAPABQAAAAHAAAAAAAPABkAAAAHAAUAAAA=")
tile_set = SubResource("TileSet_ig7tw")

[node name="Player" parent="World" instance=ExtResource("1_ig7tw")]

[node name="BulletManager" type="Node2D" parent="World"]
script = ExtResource("4_kry3j")
bullet_scene = ExtResource("5_21xkr")

[node name="EnemySpawner" parent="World" instance=ExtResource("3_1bvp3")]

[node name="Hud" parent="." instance=ExtResource("7_6bp64")]

[connection signal="shoot" from="World/Player" to="World/BulletManager" method="_on_player_shoot"]
[connection signal="hit_p" from="World/EnemySpawner" to="." method="_on_enemy_spawner_hit_p"]
